# bladedance

./: .gitignore  AGENTS.md  README.md  build.sh  meson.build  meson_options.txt  start.sh
bladedance-extensible-port/include/: extensible.h
include/: bancache.h  base.h  channelmanager.h  channels.h  clientprotocol.h  clientprotocolevent.h  clientprotocolmsg.h  command_parse.h  compat.h  config.h  configreader.h  ctables.h  dynamic.h  dynref.h  exception.h  extensible.h  extension.h  ffiutils.h  hashcomp.h  inspircd.h  iohook.h  listmode.h  logging.h  membership.h  message.h  mode.h  moduledefs.h  modules.h  parammode.h  protocol.h  rust_module.h  server.h  snomasks.h  socket.h  socketengine.h  streamsocket.h  stringutils.h  thread.h  threadsocket.h  timer.h  (+7 more)
include/modules/: cap.h  extban.h  httpd.h  ircv3_servertime.h  shun.h  sql.h  ssl.h
skills/: RUST_MIGRATION.md
src/: account.rs  account_glue.cpp  bancache.rs  bancache_shim.cpp  base.cpp  channelmanager.rs  channelmanager_ffi.cpp  channelmanager_glue.cpp  channels.cpp  cidr.rs  cidr_ffi.cpp  cidr_glue.cpp  clientprotocol.rs  clientprotocol_glue.cpp  command_ffi.cpp  commands_glue.cpp  configparser.cpp  configreader.rs  configreader_glue.cpp  configtoml.rs  dynamic.cpp  dynamic.rs  dynamic_glue.cpp  extensible.cpp  extensible.rs  extensible_glue.cpp  hashcomp.rs  hashcomp_glue.cpp  helperfuncs.rs  helperfuncs_glue.cpp  inspircd.cpp  inspircd.rs  inspircd_glue.cpp  listensocket.rs  listensocket_glue.cpp  listmode.cpp  logging.rs  logging_glue.cpp  mode.cpp  mode.rs  (+39 more)
src/coremods/: core_dns.cpp  core_hostname_lookup.cpp  core_list.cpp  core_loadmodule.cpp  core_message.cpp  core_reloadmodule.cpp  core_serialize_rfc.cpp  core_stats.cpp  core_who.cpp  core_whois.cpp  core_whowas.cpp
src/coremods/core_channel/: cmd_invite.cpp  cmd_kick.cpp  core_channel.cpp  invite.cpp
src/coremods/core_info/: cmd_admin.cpp  cmd_admin.rs  cmd_info.cpp  cmd_servlist.cpp  cmd_time.cpp  cmd_version.cpp  core_info.cpp  core_info.h  isupport.cpp
src/coremods/core_oper/: cmd_die.cpp  cmd_rehash.cpp  cmd_restart.cpp  core_oper.cpp
src/coremods/core_user/: core_user.cpp
src/coremods/core_xline/: cmd_eline.cpp  cmd_gline.cpp  cmd_kline.cpp  cmd_qline.cpp  cmd_zline.cpp  core_xline.cpp
src/modules/: m_account.cpp  m_alias.cpp  m_alltime.cpp  m_argon2.cpp  m_banredirect.cpp  m_bladedance.rs  m_callerid.cpp  m_cap.cpp  m_cban.cpp  m_chanfilter.cpp  m_chanhistory.cpp  m_chanlog.cpp  m_channames.cpp  m_channelban.cpp  m_check.cpp  m_classban.cpp  m_cloak.cpp  m_cloak_md5.cpp  m_cloak_sha256.cpp  m_cloak_user.cpp  m_codepage.cpp  m_connectban.cpp  m_customprefix.cpp  m_customtitle.cpp  m_dccallow.cpp  m_delaymsg.cpp  m_denychans.cpp  m_disable.cpp  m_dnsbl.cpp  m_filter.cpp  m_gateway.cpp  m_geo_maxmind.cpp  m_geoban.cpp  m_geoclass.cpp  m_globalload.cpp  m_helpmode.cpp  m_hidemode.cpp  m_hideoper.cpp  m_httpd.cpp  m_httpd_acl.cpp  (+52 more)
src/modules/extra/: m_geo_maxmind.cpp  m_ldap.cpp  m_log_json.cpp  m_mysql.cpp  m_pgsql.cpp  m_regex_pcre2.cpp  m_sqlite3.cpp  m_ssl_gnutls.cpp  m_ssl_openssl.cpp  m_sslrehashsignal.cpp
src/rust/: Cargo.toml  lib.rs  logging.rs
src/socketengines/: epoll.cpp  kqueue.cpp  poll.cpp  select.cpp
win/: conanfile.txt  win32service.cpp
